--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/2995902112.js" crossorigin="anonymous"></script>
     <title>Assignment 02</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-
+        <nav class="navbar">
+            <div>
+                <img src="assets/logo.png" alt="Logo">
+            </div>
+            <div class="nav-link p-font">
+                <a class="home" href="">Home</a>
+                <a class="shop" href="">Shop</a>
+                <a class="shop" href="">About us</a>
+                <a class="cart" href=""><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a>
+            </div>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
