added a our plants section and made responsive it

--- a/index.html
+++ b/index.html
@@ -20,9 +20,90 @@
                 <a class="cart" href=""><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a>
             </div>
         </nav>
+        <div class="banner">
+            <div class="about-banner">
+                <h2 class="title title-font">ALWAYS <span class="primary-color">FRESH FLOWERS</span></h2>
+                <p class="description p-font">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div>
+                <img class="banner-image" src="assets/hero-flower.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
-
+        <!-- our plants -->
+        <section class="our-plants">
+            <div class="about-plants">
+                <h3 class="h3-title"><span class="primary-color">Our</span> Plants</h3>
+                <p class="description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                     <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                     <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                     <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                     <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                     <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                     <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                     <img class="card-image" src="assets/sample-flower-image.png" alt="">
+                    <div class="details">
+                        <p class="name p-font">Lily Blossom</p>
+                        <p class="price p-font">20 USD</p>
+                        <button class="p-font btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
