--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                 </div>
             </div>
         </section>
+        <!-- flower lover -->
+         <section class="flower-lover">
+            <div class="container">
+                <div class="">
+                    <img class="badge" src="assets/trusted-badge.png" alt="">
+                    <img class="flower-lover-image" src="assets/flower-store.png" alt="">
+                </div>
+                <div class="about-flower-lover">
+                    <h3 class="h3-title">Flower & Plants <br> Lover</h3>
+                    <ul class="description">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
