added latest deals section and made it resoponsive

--- a/index.html
+++ b/index.html
@@ -121,6 +121,32 @@
                 </div>
             </div>
          </section>
+         <!-- latest deals -->
+          <section>
+            <div class="deals">
+                <h3 class="h3-title"><span class="primary-color">Latest</span>  Deals</h3>
+                <p class="description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="image-container">
+                <div class="image2">
+                    <div class="bloom">
+                        <div class="overlay"></div>
+                        <h3 class="bloom-heading title-font">60% Off | Bloom Plant</h3>
+                        <a href=""><p class="bloom-buy p-font">Shop Now</p></a>
+                    </div>
+                    <div class="ana">
+                        <div class="overlay"></div>
+                        <h3 class="bloom-heading title-font">30% Off | Ana  Plant</h3>
+                        <a href=""><p class="bloom-buy p-font">Shop Now</p></a>
+                    </div>
+                </div>
+                <div class="jabo">
+                    <div class="overlay"></div>
+                    <h3 class="jabo-heading title-font">25% Off | Zabo Plant</h3>
+                    <a href=""><p class="jabo-buy p-font">Shop Now</p></a>
+                </div>
+            </div>
+          </section>
     </main>
     <footer>
 
