added join section and made it responsive

--- a/index.html
+++ b/index.html
@@ -149,7 +149,16 @@
           </section>
     </main>
     <footer>
-
+        <!-- join section -->
+        <section class="join-section">
+            <div>
+                <h3 class="title title-font">Join the colorful Bunch</h3>
+                <div class="inptbtn">
+                    <input class="p-font" type="email" name="" placeholder="Write email" id="email">
+                    <button class="p-font">Subscribe</button>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
