--- a/index.html
+++ b/index.html
@@ -159,6 +159,32 @@
                 </div>
             </div>
         </section>
+        <section class="footer">
+            <div class="logo">
+                <img src="./assets/logo.png" alt="">
+                <p class="description">Indulge your senses with the  beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div class="link">
+                <a href="">Home</a>
+                <a href="">About Us</a>
+                <a href="">Blog</a>
+                <a href="">FAQ</a>
+                <a href="">Contact Us</a>
+            </div>
+            <div class="link">
+                <a href="">Features</a>
+                <a href="">Pricing</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Terms of Service</a>
+                <a href="">Help Center</a>
+            </div>
+            <div class="icon">
+                <img class="linkdin" src="./assets/icon-linkedin.png" alt="">
+                <img class="twitter" src="./assets/icon-twitter.png" alt="">
+                <img src="./assets/icon-facebook.png" alt="">
+                <img src="./assets/icon-youtube.png" alt="">
+            </div>
+        </section>
     </footer>
 </body>
 </html>
